# cog-voxtral-24b-2507

./: README.md  cog.yaml  main.py  predict.py  pyproject.toml  requirements.txt
